fractal/src/cc/app/fractal/evaluator/Evaluator.java
/* Generated By:JavaCC: Do not edit this line. Evaluator.java */
package cc.app.fractal.evaluator;

import cc.lib.math.ComplexNumber;

public class Evaluator extends AEvaluator implements EvaluatorConstants {
/*
    private final ComplexNumber Z0 = new ComplexNumber();
    private final ComplexNumber Zi = new ComplexNumber();
    private final ComplexNumber C  = new ComplexNumber();
    private final ComplexNumber t0 = new ComplexNumber();
//    private final ComplexNumber t1 = new ComplexNumber();

    private Node root;
    private String expression = "";
*/
    public Evaluator() {
        this(new java.io.StringReader(""));
    }

    public void parse(String expression) throws Exception {
      this.expression = expression;
        System.out.println("Parse expression '" + expression + "'");
        ReInit(new java.io.StringReader(expression));
        root = S();
        debugDump();
    }

    public void parse(ComplexNumber constant, String expression) throws Exception {
        this.C.copy(constant);
        this.expression = expression;
        System.out.println("Parse expression '" + expression + "'");
        ReInit(new java.io.StringReader(expression));
        root = S();
        debugDump();
    }

  final public Node S() throws ParseException {
           Node n;
    n = E();
    jj_consume_token(0);
               {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  final public Node E() throws ParseException {
           Node n1, n2; Type t;
    n1 = T();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 7:
      case 8:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 7:
        jj_consume_token(7);
                  t=Type.TYPE_ADD;
        break;
      case 8:
        jj_consume_token(8);
                                           t=Type.TYPE_SUB;
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      n2 = T();
                   n1 = new Node(t, n1, n2);
    }
                                                    {if (true) return n1;}
    throw new Error("Missing return statement in function");
  }

  final public Node T() throws ParseException {
           Node n1, n2; Type t;
    n1 = P();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
      case 10:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        jj_consume_token(9);
                  t=Type.TYPE_MULT;
        break;
      case 10:
        jj_consume_token(10);
                                            t=Type.TYPE_DIV;
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      n2 = P();
                   n1 = new Node(t, n1, n2);
    }
                                                   {if (true) return n1;}
    throw new Error("Missing return statement in function");
  }

  final public Node P() throws ParseException {
           Node n1, n2;
    n1 = F();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
      jj_consume_token(11);
      n2 = F();
     if (n2.type == Type.TYPE_CONSTANT) {
        if (n2.constantType == CONSTANT_INT) {
           n1 = new Node(Type.TYPE_POWI, n1, n2);
        } else if (n2.constantType == CONSTANT_DOUBLE) {
           n1 = new Node(Type.TYPE_POWD, n1, n2);
        } else {
           n1 = new Node(Type.TYPE_POWC, n1, n2);
        }
     } else {
        n1 = new Node(Type.TYPE_POWC, n1, n2);
     }
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
      {if (true) return n1;}
    throw new Error("Missing return statement in function");
  }

  final public Node F() throws ParseException {
           Token n0, n1; Node n; Type f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 18:
      jj_consume_token(18);
      n0 = jj_consume_token(NUM);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 19:
        jj_consume_token(19);
        break;
      case 7:
        jj_consume_token(7);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      n1 = jj_consume_token(NUM);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 20:
        jj_consume_token(20);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(21);
                                               {if (true) return new Node(new ComplexNumber(Double.parseDouble(n0.image), Double.parseDouble(n1.image)));}
      break;
    case 5:
      jj_consume_token(5);
      n = E();
      jj_consume_token(6);
                 {if (true) return n;}
      break;
    case 22:
      jj_consume_token(22);
         {if (true) return new Node(Type.TYPE_Z0);}
      break;
    case 23:
      jj_consume_token(23);
        {if (true) return new Node(Type.TYPE_Zi);}
      break;
    case 24:
      jj_consume_token(24);
         {if (true) return new Node(Math.E, "E");}
      break;
    case 25:
      jj_consume_token(25);
         {if (true) return new Node(Math.PI, "PI");}
      break;
    case 26:
      jj_consume_token(26);
         {if (true) return new Node(Zi.getReal(), "X");}
      break;
    case 27:
      jj_consume_token(27);
         {if (true) return new Node(Zi.getImag(), "Y");}
      break;
    case 28:
      jj_consume_token(28);
         {if (true) return new Node(C, "C");}
      break;
    case 29:
      jj_consume_token(29);
         {if (true) return new Node(Z0.getReal(), "A");}
      break;
    case 30:
      jj_consume_token(30);
         {if (true) return new Node(Z0.getImag(), "B");}
      break;
    case NUM:
      n0 = jj_consume_token(NUM);
              {if (true) return new Node(n0.image);}
      break;
    case FUNC:
      n0 = jj_consume_token(FUNC);
              f=lookupFunc(n0.image);
      jj_consume_token(5);
      n = E();
      jj_consume_token(6);
                                                        {if (true) return new Node(f, n, null);}
      break;
    case 8:
      jj_consume_token(8);
      n = F();
              {if (true) return new Node(Type.TYPE_NEGATE, n, null);}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public EvaluatorTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[8];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x180,0x180,0x600,0x600,0x800,0x80080,0x100000,0x7fc43120,};
   }

  /** Constructor with InputStream. */
  public Evaluator(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Evaluator(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new EvaluatorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Evaluator(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new EvaluatorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Evaluator(EvaluatorTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(EvaluatorTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[31];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 8; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 31; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

/*
    public void reset(ComplexNumber Zi, ComplexNumber Z0, ComplexNumber C) {
        this.Zi.copy(Zi);
        this.Z0.copy(Z0);
        this.C.copy(C);
    }

    public ComplexNumber evaluate() {
        if (root != null)
            Zi.copy(evaluateR(root));
        return Zi;
    }
    
    public ComplexNumber evaluate(String expression) throws Exception {
      	this.expression = expression;
        parse(expression);
        return evaluate();
    }

    private ComplexNumber evaluateR(Node n) {
        switch (n.type) {
        case TYPE_ADD:
            return evaluateR(n.left).add(evaluateR(n.right), t0);
        case TYPE_SUB:
            return evaluateR(n.left).sub(evaluateR(n.right), t0);
        case TYPE_MULT:
            return evaluateR(n.left).multiply(evaluateR(n.right), t0);
        case TYPE_DIV:
            return evaluateR(n.left).divide(evaluateR(n.right), t0);
        case TYPE_POWI:
            return evaluateR(n.left).powi(n.right.numi, t0);
        case TYPE_POWD:
            return evaluateR(n.left).powd(n.right.numd, t0);
        case TYPE_POWC:
            return evaluateR(n.left).powc(evaluateR(n.right), t0);
        case TYPE_SQRT:
            return evaluateR(n.left).sqrt(t0);
        case TYPE_SIN:
            return evaluateR(n.left).sine(t0);
        case TYPE_COS:
            return evaluateR(n.left).cosine(t0);
        case TYPE_TAN:
            return evaluateR(n.left).tangent(t0);
        case TYPE_SINH:
            return evaluateR(n.left).sineh(t0);
        case TYPE_COSH:
            return evaluateR(n.left).cosineh(t0);
        case TYPE_TANH:
            return evaluateR(n.left).tangenth(t0);
        case TYPE_ASIN:
            return evaluateR(n.left).asine(t0);
        case TYPE_ACOS:
            return evaluateR(n.left).acosine(t0);
        case TYPE_ATAN:
            return evaluateR(n.left).atangent(t0);
        case TYPE_ASINH:
            return evaluateR(n.left).asineh(t0);
        case TYPE_ACOSH:
            return evaluateR(n.left).acosineh(t0);
        case TYPE_ATANH:
            return evaluateR(n.left).atangenth(t0);
        case TYPE_LN:
            return evaluateR(n.left).ln(t0);
        case TYPE_EXP:
            return evaluateR(n.left).exp(t0);
        case TYPE_CONSTANT:
            return n.numc;
        case TYPE_Z0:
            return Z0;
        case TYPE_Zi:
            return Zi;
        case TYPE_NEGATE:
            return evaluateR(n.left).negate(t0);
        }
        throw new RuntimeException("Unhandled type");
    }

	public String getExpression() {
	  	return this.expression;
	}
    public void debugDump() {
        debugDumpR(0, root);
    }

    private void debugDumpR(int level, Node n) {
        if (n == null)
            return;

        for (int i=0; i<level; i++)
            System.out.print("  ");

        System.out.print(n.type.name());
        switch (n.type) {
        case TYPE_CONSTANT:
            System.out.println(" " + n.stringValue); break;
            
        case TYPE_Z0:
            System.out.println(" Z0"); break;
            
        case TYPE_Zi:
            System.out.println(" Zi"); break;
            
        default:
            System.out.println();
        }
        debugDumpR(level+1, n.left);
        debugDumpR(level+1, n.right);
    }
    
    public String getCompiledExpression() {
        StringBuffer buf = new StringBuffer();
        getCompiledExpressionR(buf, root);
        return buf.toString();
    }
    
    private void getCompiledExpressionR(StringBuffer buffer, Node n) {
        if (n == null)
            return;

        switch (n.type)        {
        case TYPE_SQRT:
        case TYPE_SIN:
        case TYPE_COS:
        case TYPE_TAN:
        case TYPE_SINH:
        case TYPE_COSH:
        case TYPE_TANH:
        case TYPE_ASIN:
        case TYPE_ACOS:
        case TYPE_ATAN:
        case TYPE_ASINH:
        case TYPE_ACOSH:
        case TYPE_ATANH:
        case TYPE_LN:
        case TYPE_EXP:
            buffer.append(n.type.symbol);
            buffer.append("(");
            getCompiledExpressionR(buffer, n.left);
            getCompiledExpressionR(buffer, n.right);
            buffer.append(")");
            break;       
        case TYPE_CONSTANT:
            getCompiledExpressionR(buffer, n.left);
            buffer.append(n.numc.toString());
            getCompiledExpressionR(buffer, n.right);
            break;
        case TYPE_POWI:
        case TYPE_POWD:
        case TYPE_POWC:
        case TYPE_ADD:
        case TYPE_SUB:
        case TYPE_MULT:
        case TYPE_DIV:
        case TYPE_Z0:
        case TYPE_Zi:
            getCompiledExpressionR(buffer, n.left);
            buffer.append(n.type.symbol);
            getCompiledExpressionR(buffer, n.right);
            break;
        case TYPE_NEGATE:
            buffer.append(n.type.symbol);
            getCompiledExpressionR(buffer, n.left);
            getCompiledExpressionR(buffer, n.right);
            break;
        }
    }

// We really dont need this, Z0 and Zi are an extension of CONSTANT
// Should be something like: FUNC, NUM, COMPLEX_NUM only
    private enum Type {
        TYPE_ADD("+"), // complex + complex
        TYPE_SUB("-"), // complex - complex
        TYPE_MULT("*"), // complex * complex
        TYPE_DIV("//"),  // complex / complex
        TYPE_CONSTANT(""), // Complex constant [a+bi]
        TYPE_POWI("^"), // complex ^ int
        TYPE_POWD("^"), // complex ^ double
        TYPE_POWC("^"), // complex ^ complex
        TYPE_SQRT("sqrt"), // sqrt (complex)
        TYPE_SIN("sin"), // sin (complex)
        TYPE_COS("cos"), // cos (complex)
        TYPE_TAN("tan"), // tan (complex)
        TYPE_ASIN("asin"), // sin (complex)
        TYPE_ACOS("acos"), // cos (complex)
        TYPE_ATAN("atan"), // tan (complex)
        TYPE_SINH("sinh"), // sinh (complex)
        TYPE_COSH("cosh"), // cosh (complex)
        TYPE_TANH("tanh"),        
        TYPE_ASINH("asinh"), // sinh (complex)
        TYPE_ACOSH("acosh"), // cosh (complex)
        TYPE_ATANH("atanh"),
        TYPE_LN("ln"),  // ln (complex)
        TYPE_EXP("e^"), // exp (complex)
        TYPE_Z0("Z0"),
        TYPE_Zi("Zi"),
        TYPE_NEGATE("-"), // -constant
        
        ;
        
        private Type(String symbol) {
            this.symbol = symbol;
        }
        
        final String symbol;
    }
    
    // TODO: Merge with the functions of Type, make type one of constant or func, move
    //   this enum to an external file with the evaluators as abstract function.
    //   Should be able to add functions with out running javacc on this file.
    private enum Function {
        sqrt(Type.TYPE_SQRT),
        sin(Type.TYPE_SIN),
        sinh(Type.TYPE_SINH),
        asin(Type.TYPE_ASIN),
        asinh(Type.TYPE_ASINH),
        cos(Type.TYPE_COS),
        cosh(Type.TYPE_COSH),
        acos(Type.TYPE_ACOS),
        acosh(Type.TYPE_ACOSH),
        tan(Type.TYPE_TAN),
        tanh(Type.TYPE_TANH),
        atan(Type.TYPE_ATAN),
        atanh(Type.TYPE_ATANH),
        ln(Type.TYPE_LN),
        exp(Type.TYPE_EXP),
        ;
        
        Function(Type type) {
            this.type = type;
        }
        
        final Type type;
    }
    
    private Type lookupFunc(String name) {
        try {
            return Function.valueOf(name).type;
        } catch (Exception e) {
            throw new RuntimeException("Unknown function '" + name + "' must be one of : " + java.util.Arrays.asList(Function.values()));
        }
    }

    private final int CONSTANT_COMPLEX = 0;
    private final int CONSTANT_DOUBLE  = 1;
    private final int CONSTANT_INT     = 2;

    private class Node {
        Type type;
        ComplexNumber numc;
        int numi;
        double numd;
        int constantType = -1;
        String stringValue;

        Node(Type type, Node left, Node right) {
            this.type = type;
            this.left = left;
            this.right = right;
        }

        Node(double constant, String value) {
            type = Type.TYPE_CONSTANT;
            constantType = CONSTANT_DOUBLE;
            numd = constant;
            numc = new ComplexNumber(numd, 0);
            this.stringValue = value == null ? String.valueOf(numd) : value + " {" + numd + "}";
        }
  
        Node(String constant) {
            stringValue = constant;
            type = Type.TYPE_CONSTANT;
            try {
               numi = Integer.parseInt(constant);
               numd = numi;
               constantType = CONSTANT_INT;
               stringValue += " {" + numi + "}";
            } catch (NumberFormatException e) {
               numd = Double.parseDouble(constant);
               constantType = CONSTANT_DOUBLE;
               stringValue += " {" + numd + "}";
            }
            numc = new ComplexNumber(numd, 0);
        }

        Node(Type type) {
            this.type = type;
        }

        Node(ComplexNumber constant) {
            this.type = Type.TYPE_CONSTANT;
            if (constant.isReal()) {
                this.constantType = CONSTANT_DOUBLE;
                this.numd = constant.getReal();
                stringValue = "{" + numd + "}";
            } else {
                this.constantType = CONSTANT_COMPLEX;
                stringValue = constant.toString();
            }
            this.numc = constant;
        }

        Node(ComplexNumber constant, String name) {
            this.type = Type.TYPE_CONSTANT;
            if (constant.isReal()) {
                this.constantType = CONSTANT_DOUBLE;
                this.numd = constant.getReal();
                stringValue = name + " {" + numd + "}";
                
            } else {
                this.constantType = CONSTANT_COMPLEX;
                stringValue = name + " " + constant;
            }
            this.numc = constant;
        }

        Node left, right;

    }
    */
}
